--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "npx tsc", 
+    "start": "npx tsc && node dist/index.js",
+    "run": "node dist/index.js"
   },
   "keywords": [],
   "author": "",
