--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "npx tsc", 
+    "build": "npx tsc",
     "start": "npx tsc && node dist/index.js",
     "run": "node dist/index.js"
   },
@@ -16,11 +16,14 @@
   "dependencies": {
     "axios": "^1.7.9",
     "dotenv": "^16.4.7",
+    "express": "^4.21.2",
     "kafkajs": "^2.2.4",
     "minio": "^8.0.4",
-    "pg": "^8.13.3"
+    "pg": "^8.13.3",
+    "prom-client": "^15.1.3"
   },
   "devDependencies": {
+    "@types/express": "^5.0.0",
     "@types/pg": "^8.11.11"
   }
 }
