--- a/package.json
+++ b/package.json
@@ -4,23 +4,25 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "build": "npx tsc",
-    "start": "npx tsc && node dist/index.js",
-    "run": "node dist/index.js"
+    "start": "node dist/index.js",
+    "dev": "npx tsc && node dist/index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "axios": "^1.7.9",
-    "dotenv": "^16.4.7",
+    "@types/express": "^5.0.0",
+    "@types/pg": "^8.11.11",
+    "@types/socket.io": "^3.0.1",
     "express": "^4.21.2",
     "kafkajs": "^2.2.4",
     "minio": "^8.0.4",
     "pg": "^8.13.3",
-    "prom-client": "^15.1.3"
+    "prom-client": "^15.1.3",
+    "socket.io": "^4.8.1",
+    "typescript": "^5.8.3"
   },
   "devDependencies": {
     "@types/express": "^5.0.0",
